--- a/CSS/video21/Specificity&Cascade.html
+++ b/CSS/video21/Specificity&Cascade.html
@@ -34,3 +34,5 @@ Author styles generally take precedence over user styles, and user styles take p
     </div>
 </body>
 </html>
+
+<!-- even important will make inline style even override it -->
