--- a/CSS/video22/CSS Sizing Units/units.html
+++ b/CSS/video22/CSS Sizing Units/units.html
@@ -22,37 +22,86 @@
         margin: 23px auto;
 /* top bottom first and left right second parameter */
     }
+
+
+   .body{
+       background-color: aqua;
+        box-sizing: border-box;
+        border: 2px solid black;
+        width: 80vw;
+        margin: 23px auto;
+        font-size: 16px;
+min-height: 80vh;
+/*  max jitna bhi dalo ge brhta rhega
+ */
+
+} 
 /*  if we want to center a div we can do margin div so basically margin from left and right but it will only center if its a block elemetn and not if its a inline element */
 .container{
        background-color: aqua;
         box-sizing: border-box;
         border: 2px solid black;
         width: 80vw;
-        height: 80vh;
         margin: 23px auto;
         font-size: 16px;
+min-height: 80vh;
+/*  max jitna bhi dalo ge brhta rhega
+ */
+
 }
 /*  p will inherit container */
-.container p{
+.container > div{
 /* font-size: 20px; */
 /* nothing will happen now but
 with em what we can do is the value of fontsize or anything for that matter
 that it will inherit willhave a value multiplied by the em amount */
 color:red;
 font-size: 1em;
+
+
 /* rem is root element similar to em */
 
+width: 50%;
+/*  this will make its width 50% of the parent width
+  */
+}
+.container > div > div{
+    width: 50%;
+    /*  look for yourself */
 }
 
+/*  kbh kbar ye hota heke width bra hota he height  and phone me height bri hota he
+to similarly view port k a size 100 to jo minimum wo hundred */
+
+.mycont{
+    box-sizing: border-box;
+    margin: 20px auto;
+    color: yellowgreen;
+    font-size: 22px;
+    /*  v min will be height for pc  */
+    width: 100vmax; 
+    border: 2px solid black; 
+       background-color: aqua;
+
+}
 
 </style>
 </head>
 <body>
-    <h1 class="container">Hello</h1>
+    <h1 class="body">Hello</h1>
     <div class="container">
-    <p >Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque accusamus atque dignissimos architecto nisi dolorem? Quis inventore architecto minus nesciunt voluptatum voluptas et? Quas necessitatibus, vel voluptates veniam est quam ipsum ad sed possimus eos vero reprehenderit, tenetur voluptas optio blanditiis illo, suscipit aperiam.</p>
+    <div >Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque accusamus atque dignissimos architecto nisi dolorem? Quis inventore architecto minus nesciunt voluptatum voluptas et? Quas necessitatibus, vel voluptates veniam est quam ipsum ad sed possimus eos vero reprehenderit, tenetur voluptas optio blanditiis illo, suscipit aperiam.</div>
+Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus placeat nam accusantium reprehenderit iure quod, sequi quae aut vitae magni quo ut corporis quibusdam voluptatem dicta optio repellendus aperiam. Earum praesentium necessitatibus eaque aut asperiores, corporis ipsum. Corporis quis inventore laudantium accusantium dolor aliquam cupiditate, debitis suscipit tempore provident ut saepe temporibus non optio, eaque magni vitae. Dolorum mollitia sit quas deserunt exercitationem quasi minus dolor tempore earum expedita, architecto eius perferendis dicta at suscipit incidunt. Harum mollitia laudantium esse beatae quibusdam repellat illo officiis tempora natus, placeat amet aspernatur facere nihil corporis cumque est. Officiis libero ut voluptate.
+   
 
-    </div>
+        <div>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Atque, officia quae quaerat voluptatem deserunt officiis reprehenderit doloribus molestias repellendus explicabo sapiente ut!
+        </div>
+</div>
+
+<div class="mycont">
+    I am another container
+</div>
 
 </body>
 </html>
