--- a/CSS/video24/Shadows and Outlines/shadooutline.html
+++ b/CSS/video24/Shadows and Outlines/shadooutline.html
@@ -13,16 +13,30 @@ color defines the shadow color4
 inset makes the shadow inner */
 .box{
 
-    border: 2px solid black;
+    border: 4px solid black;
     padding: 20px;
     box-shadow: 5px 15px 5px gray;
 }
+/* similarly for text shadow */
+.box > p{
+ 
+    text-shadow: 2px 2px 4px rgb(187, 21, 187);
+}
+/*  now for text outline */
+/*  [arameter for it is widht style color] */
+ p{
+    outline: 9px solid rgb(251, 19, 19);
+
+    /* border is inside and outline is outside outline is not included in the box model property where as border is included in that mdel */
+    /* border can have border radius where as outlines gnerally dont  */
+} 
 
     </style>
 </head>
 <body>
     <div class="box">
         I am a box
+        <p class="box"> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eos dolorum delectus in eaque similique aut nam libero nemo molestiae, reiciendis facere a?</p>
     </div>
 </body>
 </html>
