--- a/CSS/video25/Styling Lists/stylinglists.html
+++ b/CSS/video25/Styling Lists/stylinglists.html
@@ -10,9 +10,15 @@
             /* marker is outside list itemif we color it it will not */
 list-style-position: inside;
 background-color: yellow;
-list-style-image: url(https://user-images.githubusercontent.com/14011726/94132137-7d4fc100-fe7c-11ea-8512-69f90cb65e48.gif);
+/* list-style-image: url(https://user-images.githubusercontent.com/14011726/94132137-7d4fc100-fe7c-11ea-8512-69f90cb65e48.gif); */
 /* the above will get preference */
-list-style-type: "😂";        
+list-style-type: "😂";  
+list-style: disc inside ;
+list-style: none;
+padding: 30px;
+}
+nav ul{
+display: flex;
 }
     </style>
 </head>
