--- a/Jauntic/jauntsol.html
+++ b/Jauntic/jauntsol.html
@@ -30,7 +30,7 @@
     <div class="main1">
         <h1>Transforming Visions
 into Digital Reality</h1>
-<button class="worktgt">Let's Work Together</button>
+<button class="worktgt btn-light">Let's Work Together</button>
     </div>
     <div class="main2">
         <h2>Empowering Businesses For Sustainable Growth</h2>
