--- a/Jauntic/jauntsol.html
+++ b/Jauntic/jauntsol.html
@@ -4,6 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jaunt Solution</title>
+  <!-- Bootstrap CSS -->
+<link rel="stylesheet" href="assets/css/bootstrap5.min.css">
+
+<!-- Optional: Bootstrap Icons -->
+<link rel="stylesheet" href="assets/css/bootstrap-icons.css">
+
+<!-- Your styles (should come after Bootstrap) -->
+<link rel="stylesheet" href="assets/css/style.css">
+<link rel="stylesheet" href="assets/css/style_responsive.css">
+<link rel="stylesheet" href="assets/css/aos.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,8 +25,8 @@
     </div>
     <ul class="navthings">
       <li><a class="theme1" href="#">Home</a></li>
-      <li><a class="theme1 href="#">About</a></li>
-      <li><a class="theme1 href="#">Services</a></li>
+      <li><a class="theme1" href="#">About</a></li>
+      <li><a class="theme1" href="#">Services</a></li>
       <li class="nav-item">
         <a  class="nav-link theme1" href="#">Products</a>
         <ul class="dropdown-menu">
@@ -226,7 +238,184 @@ into Digital Reality</h1>
       </div>
     </section>
       </div>
- 
+   <div class="section6">
+  <div class="section6-container">
+    <!-- Section Header -->
+    <div class="section6-header">
+      <p class="section6-title">
+        <i class="bi bi-circle-half"></i> CLIENT REVIEWS
+      </p>
+    </div>
+
+    <!-- Section Content -->
+    <div class="section6-content">
+
+      <!-- REVIEW START -->
+      <div class="review-card">
+        <!-- Name & Role -->
+        <div class="review-person">
+          <h2 class="review-name">Micheal T</h2>
+          <p class="review-role">TechStartup Founder</p>
+        </div>
+
+        <!-- Review Text -->
+        <div class="review-text">
+          <p class="review-quote">
+            “Working with this team was an incredible experience! They took the time to understand our vision and executed it flawlessly. The creativity and strategic approach they brought to our project exceeded our expectations. We’ve seen a remarkable improvement in brand recognition and customer engagement. Highly recommend their expertise!”
+          </p>
+        </div>
+
+        <!-- Icon + Image -->
+        <div class="review-meta">
+          <i class="review-icon bi bi-arrow-up-right-circle"></i>
+          <img class="client-image" src="assets/images/client-1.webp" alt="Client image">
+        </div>
+      </div>
+      <hr class="review-divider">
+      <!-- REVIEW END -->
+
+      <!-- COPY AND PASTE ABOVE BLOCK FOR MORE REVIEWS -->
+<div class="review-card">
+        <!-- Name & Role -->
+        <div class="review-person">
+          <h2 class="review-name">Micheal T</h2>
+          <p class="review-role">TechStartup Founder</p>
+        </div>
+
+        <!-- Review Text -->
+        <div class="review-text">
+          <p class="review-quote">
+            “Working with this team was an incredible experience! They took the time to understand our vision and executed it flawlessly. The creativity and strategic approach they brought to our project exceeded our expectations. We’ve seen a remarkable improvement in brand recognition and customer engagement. Highly recommend their expertise!”
+          </p>
+        </div>
+
+        <!-- Icon + Image -->
+        <div class="review-meta">
+          <i class="review-icon bi bi-arrow-up-right-circle"></i>
+          <img class="client-image" src="assets/images/client-1.webp" alt="Client image">
+        </div>
+      </div>
+      <hr class="review-divider">
+      <div class="review-card">
+        <!-- Name & Role -->
+        <div class="review-person">
+          <h2 class="review-name">Micheal T</h2>
+          <p class="review-role">TechStartup Founder</p>
+        </div>
+
+        <!-- Review Text -->
+        <div class="review-text">
+          <p class="review-quote">
+            “Working with this team was an incredible experience! They took the time to understand our vision and executed it flawlessly. The creativity and strategic approach they brought to our project exceeded our expectations. We’ve seen a remarkable improvement in brand recognition and customer engagement. Highly recommend their expertise!”
+          </p>
+        </div>
+
+        <!-- Icon + Image -->
+        <div class="review-meta">
+          <i class="review-icon bi bi-arrow-up-right-circle"></i>
+          <img class="client-image" src="assets/images/client-1.webp" alt="Client image">
+        </div>
+      </div>
+      <hr class="review-divider">
+      <div class="review-card">
+        <!-- Name & Role -->
+        <div class="review-person">
+          <h2 class="review-name">Micheal T</h2>
+          <p class="review-role">TechStartup Founder</p>
+        </div>
+
+        <!-- Review Text -->
+        <div class="review-text">
+          <p class="review-quote">
+            “Working with this team was an incredible experience! They took the time to understand our vision and executed it flawlessly. The creativity and strategic approach they brought to our project exceeded our expectations. We’ve seen a remarkable improvement in brand recognition and customer engagement. Highly recommend their expertise!”
+          </p>
+        </div>
+
+        <!-- Icon + Image -->
+        <div class="review-meta">
+          <i class="review-icon bi bi-arrow-up-right-circle"></i>
+          <img class="client-image" src="assets/images/client-1.webp" alt="Client image">
+        </div>
+      </div>
+      <hr class="review-divider">
+    </div>
+  </div>
+  
+</div>
+<div class="section7">
+  <section id="pricing" class="mt-5 pt-5 container-fluid" style="max-width: 90%;">
+        <div class="container mx-auto row mt-5 pt-5">
+            <div class="col-12 text-light text-center">
+                <!-- <p class="fw-bold"><i class="bi bi-circle-half text-light"></i> PRICING PLANS</p> -->
+                <h1 class="display-3 my-4"><span style="font-weight: 500;">Custom Plans,</span> <span class="stylish-font">Lasting Impacts!</span></h1>
+                <p>We offer flexible plans tailored to your specific goals, providing the right balance of creativity and strategy. Whether you're a startup or an established brand, our solutions are designed to deliver powerful and lasting results.</p>
+            </div>
+        </div>
+    </section>
+</div>
+ <div class="section8">
+  <section id="blogs" class="mt-5 pt-5 container-fluid" style="max-width: 90%;">
+  
+      <!-- Heading -->
+      <div class="row">
+        <div class="col-12 col-lg-6 text-light">
+          <p class="fw-bold"><i class="bi bi-circle-half text-light"></i> LATEST BLOG</p>
+          <h1 class="display-4 my-3"><span style="font-weight: 500;">Creative Insights &amp;</span></h1>
+          <h1 class="display-4 my-2"><span class="stylish-font">Innovations</span></h1>
+        </div>
+        <!-- <div class="col-12 col-lg-6 d-flex justify-content-lg-end align-items-start mt-3 mt-lg-0">
+          <a href="#" class="btn btn-lg btn-outline-light">VIEW MORE</a>
+        </div> -->
+      </div>
+
+      <!-- Blog Cards -->
+      <div class="blog-cards row mt-5 g-4">
+        
+        <!-- Blog Card 1 -->
+        <div class="col-12 col-lg-6 text-light">
+          <div class="blog-card card bg-transparent text-light h-100">
+            <div class="row g-0 align-items-center">
+              <div class="col-12 col-md-4">
+                <img src="assets/images/blog-1.webp" class="rounded-3 border border-secondary img-fluid w-100 h-100 object-fit-cover" alt="Blog 1">
+              </div>
+              <div class="col-12 col-md-8 p-4">
+                <div class="card-body">
+                  <p><small>April 16, 2025</small></p>
+                  <h2 class="my-3 h4">The Future of UX: Designing for Tomorrow’s Users</h2>
+                  <p class="text-secondary small">
+                    User experience is evolving rapidly. Learn how emerging trends like AI-driven design, voice interfaces, and personalization are shaping the future of UX.
+                  </p>
+                  <i class="bi bi-arrow-right mt-3 fs-2"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Blog Card 2 -->
+        <div class="col-12 col-lg-6 text-light">
+          <div class="blog-card card bg-transparent text-light h-100">
+            <div class="row g-0 align-items-center">
+              <div class="col-12 col-md-4">
+                <img src="assets/images/blog-2.webp" class="rounded-3 border border-secondary img-fluid w-100 h-100 object-fit-cover" alt="Blog 2">
+              </div>
+              <div class="col-12 col-md-8 p-4">
+                <div class="card-body">
+                  <p><small>May 1, 2025</small></p>
+                  <h2 class="my-3 h4">How Digital Marketing Can Transform Your Business</h2>
+                  <p class="text-secondary small">
+                    Understand the key digital marketing strategies, such as SEO, social media, and content marketing, that can drive growth, increase visibility, and generate measurable results for your business.
+                  </p>
+                  <i class="bi bi-arrow-right mt-3 fs-2"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </section>
+ </div>
   <script src="script.js"></script>
 </body>
 </html>
