--- a/CSS/Exercise5/index.html
+++ b/CSS/Exercise5/index.html
@@ -347,6 +347,76 @@ footer hr {
 .imager{
   width: 30px;
 }
+@media (max-width: 1024px) {
+  .main {
+    flex-direction: column;
+    height: auto;
+    gap: 2rem;
+  }
+
+  .main1, .main2 {
+    width: 90%;
+    height: auto;
+    margin-bottom: 2rem;
+  }
+
+  .buttonlearn {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    font-size: 20px;
+  }
+
+  .heading {
+    font-size: 30px;
+    text-align: center;
+  }
+
+  .Projects {
+    font-size: 18px;
+    text-align: center;
+  }
+
+  .footer-content {
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+  }
+
+  .footer-content > div {
+    width: 100%;
+  }
+
+  nav {
+    flex-wrap: wrap;
+    justify-content: space-between;
+    height: auto;
+  }
+
+  nav li {
+    flex: 1 1 100%;
+    text-align: center;
+    padding: 10px;
+  }
+
+  .toggle {
+    margin: 10px auto;
+  }
+
+  .welcome {
+    width: 95%;
+    font-size: 20px;
+    padding: 1rem;
+  }
+
+  .log {
+    width: 45px;
+    height: 45px;
+    bottom: 15px;
+    right: 15px;
+  }
+}
+
     </style>
 </head>
 <body>
