--- a/CSS/Exercise5/index.html
+++ b/CSS/Exercise5/index.html
@@ -346,6 +346,7 @@ footer hr {
 }
 .imager{
   width: 30px;
+  transition: all 0.3s ease-in-out;
 }
 @media (max-width: 1024px) {
   .main {
@@ -390,7 +391,7 @@ footer hr {
   nav {
     flex-wrap: wrap;
     justify-content: space-between;
-    height: auto;
+    height: 23vh;
   }
 
   nav li {
@@ -405,7 +406,7 @@ footer hr {
 
   .welcome {
     width: 95%;
-    font-size: 20px;
+    font-size: 18px;
     padding: 1rem;
   }
 
