--- a/CSS/video38/flexbox/flexbox.html
+++ b/CSS/video38/flexbox/flexbox.html
@@ -7,10 +7,24 @@
     <style>
         .container{
             display: flex;
+            background-color: antiquewhite;
+            width: 100%;
+            height: 80vh;
             /* justify content or aligh items flex ki direction pr jkam krte hen */
+       /*  jis direction me flex he us ko ham main axis kehte hen or jis axis me ni he usko ham cross axis kehte hen
+        */
+        /* cross acxis ke directon me main start hota he simialry for main end or main start ke sath cross start hota he
+         */
+         justify-content: center;
+         align-items: center;
+         /* ab agar tehre are so many content that it si over flowing so in order to stop that we can do is */
+         flex-wrap: wrap;
+         /* wrap ka mtlb he simply
+          */
+          /* lipat jayega */
         }
         .boxes{
-            background-color: blueviolet;
+            background-color: rgb(35, 106, 238);
             border: 2px solid brown;
             width: 33px;
             height: 33px;
@@ -22,6 +36,30 @@
 </head>
 <body>
     <div class="container">
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
+        <div class="boxes"></div>
         <div class="boxes"></div>
         <div class="boxes"></div>
         <div class="boxes"></div>
