--- a/CSS/video38/flexbox/flexbox.html
+++ b/CSS/video38/flexbox/flexbox.html
@@ -1,70 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FlexBox</title>
-    <style>
-        .container{
-            display: flex;
-            background-color: antiquewhite;
-            width: 100%;
-            height: 80vh;
-            /* justify content or aligh items flex ki direction pr jkam krte hen */
-       /*  jis direction me flex he us ko ham main axis kehte hen or jis axis me ni he usko ham cross axis kehte hen
-        */
-        /* cross acxis ke directon me main start hota he simialry for main end or main start ke sath cross start hota he
-         */
-         justify-content: center;
-         align-items: center;
-         /* ab agar tehre are so many content that it si over flowing so in order to stop that we can do is */
-         flex-wrap: wrap;
-         /* wrap ka mtlb he simply
-          */
-          /* lipat jayega */
-        }
-        .boxes{
-            background-color: rgb(35, 106, 238);
-            border: 2px solid brown;
-            width: 33px;
-            height: 33px;
-            margin: 10px;
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>FlexBox</title>
+  <style>
+    .container {
+      display: flex; /* Yeh bol raha hai ke bhai flex layout use karna hai */
+      background-color: antiquewhite;
+      width: 100%;
+      height: 80vh;
 
-        }
-    </style>
+      /* Flex ki direction by default 'row' hoti hai (main axis = horizontal, cross axis = vertical) */
 
+      justify-content: center; /* Main axis (row) ke along center karega content ko */
+      align-items: center; /* Cross axis (column) ke along center karega content ko */
+      
+      flex-wrap: wrap; /* Jab jagah kam pade toh doosri line mein chalay jao, warna ek line mein chipak jaoge */
+
+      align-content: center; 
+      /* Jab ek se zyada lines hongi (due to wrap), un lines ko vertically center karega.
+         Note: Agar ek hi line ho toh is ka koi farq nahi. Useless ho jata hai tab. */
+
+      gap: 20px; /* Har box ke darmiyan thoda sa gap daal diya, taake thoda sa saans le sake */
+    }
+
+    /* Order se hum kisi bhi item ki priority ya position set kar sakte hain. Default order: 0 hota hai */
+
+    .order-1 { order: 1; }
+    .order-2 { order: 2; }
+    .order-3 { order: 3; }
+    .order-22 { order: 22; } /* Yeh bhai sabse baad mein dikhayega */
+
+    /* Flex grow: jitna zyada grow number, utna zyada jagah lega compared to others */
+
+    .item-1 {
+      flex-grow: 2;
+      /* Iska matlab: agar extra space ho, toh yeh item doosron se 2 guna zyada space lega */
+    }
+
+    .boxes {
+      flex-grow: 1;
+      /* ❗This grow ka effect sirf last line ke items par is liye lag raha hai kyunke pehle hi wrap ho gaya
+         Aur grow sirf available space ko fill karta hai. Jahan space nahi, wahan grow bhi chup hai 😅 */
+
+      background-color: rgb(35, 106, 238);
+      border: 2px solid brown;
+      width: 33px;
+      height: 33px;
+      margin: 10px;
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-weight: bold;
+    }
+
+    /* Flex shrink: jis item par yeh zyada hoga, woh chhota hone mein expert hoga 🤓 */
+
+    .item-2 {
+      flex-shrink: 2;
+      /* Agar jagah kam pad gayi toh yeh item 2x fast shrink hoga compared to others */
+    }
+
+    /* Align-self: sirf ek specific item ko cross axis par control karne ke liye use hota hai */
+
+    .item-3 {
+      align-self: flex-end;
+      /* Bhai sab neeche rehna pasand karte hain, independent attitude 😎 */
+    }
+
+    /* Bonus: flex-basis — agar grow/shrink ka confusion ho toh yeh base size set karta hai */
+
+    .item-basis {
+      flex-basis: 100px;
+      /* Default width set kar raha hai, isko grow/shrink adjust karte hain later */
+    }
+
+    /* Ek aur bonus: Responsive styling ke liye */
+    @media (max-width: 600px) {
+      .container {
+        flex-direction: column;
+        align-items: stretch;
+        height: auto;
+      }
+    }
+
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-        <div class="boxes"></div>
-    </div>
+
+  <div class="container">
+    <div class="boxes order-1">1</div>
+    <div class="boxes order-3">2</div>
+    <div class="boxes order-2">3</div>
+    <div class="boxes order-22">4</div>
+    <div class="boxes">5</div>
+    <div class="boxes item-1">6</div>
+    <div class="boxes">7</div>
+    <div class="boxes">8</div>
+    <div class="boxes">9</div>
+    <div class="boxes item-2">10</div>
+    <div class="boxes">11</div>
+    <div class="boxes">12</div>
+    <div class="boxes">13</div>
+    <div class="boxes">14</div>
+    <div class="boxes item-3">15</div>
+    <div class="boxes item-basis">16</div>
+    <div class="boxes">17</div>
+    <div class="boxes">18</div>
+    <div class="boxes">19</div>
+    <div class="boxes">20</div>
+    <div class="boxes">21</div>
+    <div class="boxes">22</div>
+    <div class="boxes">23</div>
+    <div class="boxes">24</div>
+    <div class="boxes">25</div>
+    <div class="boxes">26</div>
+    <div class="boxes">27</div>
+  </div>
+
 </body>
 </html>
