--- a/Jauntic/jauntsol.html
+++ b/Jauntic/jauntsol.html
@@ -288,8 +288,8 @@ into Digital Reality</h1>
             “Working with this team was an incredible experience! They took the time to understand our vision and executed it flawlessly. The creativity and strategic approach they brought to our project exceeded our expectations. We’ve seen a remarkable improvement in brand recognition and customer engagement. Highly recommend their expertise!”
           </p>
         </div>
-
-        <!-- Icon + Image -->
+` ```                                                                               `
+        <!-- Icon + Image -->`
         <div class="review-meta">
           <i class="review-icon bi bi-arrow-up-right-circle"></i>
           <img class="client-image" src="assets/images/client-1.webp" alt="Client image">
